# project_NUMA_KNN

./: CMakeLists.txt  flann_kmeans_index.h  main.cpp  main.h  sdc_index.cpp  sdc_index.h  sdc_kmeans.h  test.sh
learning_Unix_programming/: CMakeLists.txt  demo_fork.cpp  demo_redirection.cpp  demo_signal_01.cpp  demo_signal_02.cpp  demo_waitpid.cpp  test.txt
learning_flann/: CMakeLists.txt  flann_KNN.cpp  flann_demo_01.cpp  my_flann_with_opencv.cpp  opencv_SIFT_with_flann.cpp  opencv_SURF_with_flann.cpp  result.hdf5
learning_opencv/: CMakeLists.txt  flann_with_opencv_demo.cpp  opencv_blur_image_demo.cpp  test.sh
learning_openmp/: CMakeLists.txt  openmp_demo_01.cpp
learning_pmc/: CMakeLists.txt  loop.c  pmc_profiler.c
opencv_related/: CMakeLists.txt  flann_with_opencv_demo.cpp  opencv_feature_detection_demo.cpp  opencv_smoothing_image_demo.cpp
tang_xiaoxin_source_code/: CMakeLists.txt  common.h  csv_parser.cpp  flann_kdtree_index.h  flann_linear_index.h  main.h  rbc_index.cpp  rbc_index.h  test.sh
